# GM2Calc

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  ChangeLog  ChangeLog.md  Makefile  README  README.md  conanfile.txt
.github/workflows/: coverage.yml  test.yml
cmake/: FindGM2Calc.cmake  gm2calc.pc.in
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  mainpage.dox  module.mk  release.txt
examples/: CMakeLists.txt  example-gm2calc.cpp  example-gm2calc.m  example-gm2calc_c.c  example-gm2scan.cpp  example-slha.cpp  example-slha.m  example-slha_c.c  example-thdm.cpp  example-thdm.m  example-thdm_c.c  example_gm2calc.py  example_gm2calc.py.in  example_gm2scan.py  example_gm2scan.py.in  example_slha.py  example_slha.py.in  example_thdm.py  example_thdm.py.in  module.mk
include/gm2calc/: GeneralTHDM.h  GeneralTHDM.hpp  GeneralTHDM_mass_eigenstates.hpp  GeneralTHDM_parameters.hpp  GeneralTHDM_physical.hpp  GeneralTHDM_problems.hpp  GeneralTHDM_soft_parameters.hpp  MSSMNoFV_onshell.h  SM.h  (+20 more)
input/: example.gm2  example.slha  example.thdm  gm2calc.in  slha.in
math/: GeneralTHDMBarrZee.m  GeneralTHDMGM2.m  GeneralTHDMOneLoop2.m  GeneralTHDMTwoLoopB.m  THDMBarrZee.m  THDMOneLoop.m  THDMTwoLoopB.m  THDMTwoLoopF.m  ffunctions.m
src/: CMakeLists.txt  MSSMNoFV_onshell.cpp  MSSMNoFV_onshell.h  MSSMNoFV_onshell.hpp  MSSMNoFV_onshell_c.cpp  MSSMNoFV_onshell_mass_eigenstates.cpp  MSSMNoFV_onshell_mass_eigenstates.hpp  MSSMNoFV_onshell_physical.cpp  MSSMNoFV_onshell_physical.hpp  MSSMNoFV_onshell_problems.cpp  MSSMNoFV_onshell_problems.hpp  MSSMNoFV_onshell_soft_parameters.cpp  MSSMNoFV_onshell_soft_parameters.hpp  MSSMNoFV_onshell_susy_parameters.cpp  MSSMNoFV_onshell_susy_parameters.hpp  compare.hpp  config.h.in  dilog.cpp  dilog.f  dilog.h  example-gm2calc.cpp  example-slha.cpp  ffunctions.cpp  ffunctions.hpp  gm2_1loop.cpp  gm2_1loop.h  gm2_1loop.hpp  gm2_1loop_c.cpp  gm2_1loop_helpers.hpp  gm2_2loop.cpp  gm2_2loop.h  gm2_2loop.hpp  gm2_2loop_c.cpp  gm2_2loop_helpers.hpp  gm2_complex.hpp  gm2_config.h.in  gm2_config_options.hpp  gm2_constants.h  gm2_dilog.cpp  gm2_dilog.hpp  (+28 more)
src/GeneralTHDM/: GTHDM_soft_parameters.cpp  GTHDM_soft_parameters.hpp  GTHDM_susy_parameters.cpp  GTHDM_susy_parameters.hpp  GeneralTHDM.cpp  GeneralTHDM_c.cpp  GeneralTHDM_mass_eigenstates.cpp  GeneralTHDM_oldcode.cpp  GeneralTHDM_parameters.cpp  GeneralTHDM_physical.cpp  GeneralTHDM_problems.cpp  GeneralTHDM_soft_parameters.cpp  GeneralTHDM_susy_parameters.cpp  gm2_1loop.cpp  gm2_1loop_H.cpp  gm2_1loop_c.cpp  gm2_1loop_helpers.hpp  gm2_2loop.cpp  gm2_2loop_B.cpp  gm2_2loop_F.cpp  gm2_2loop_c.cpp  gm2_2loop_helpers.hpp  gm2_uncertainty.cpp  gm2_uncertainty_c.cpp
src/MSSMNoFV/: MSSMNoFV_onshell.cpp  MSSMNoFV_onshell_mass_eigenstates.cpp  gm2_1loop.cpp  gm2_1loop_helpers.hpp  gm2_2loop.cpp  gm2_uncertainty.cpp  gm2_uncertainty_c.cpp
src/SM/: SM.cpp  SM_c.cpp
src/THDM/: THDM.cpp  THDM_c.cpp  THDM_mass_eigenstates.cpp  THDM_parameters.cpp  gm2_1loop.cpp  gm2_1loop_H.cpp  gm2_1loop_c.cpp  gm2_1loop_helpers.hpp  gm2_2loop.cpp  gm2_2loop_B.cpp  gm2_2loop_F.cpp  gm2_2loop_c.cpp  gm2_2loop_helpers.hpp  gm2_uncertainty.cpp  gm2_uncertainty_c.cpp
test/: CMakeLists.txt  Makefile  compare.sh  doctest.h  generate_data.m  read_data.hpp  stopwatch.hpp  test.hpp  test_GeneralTHDM.cpp  test_GeneralTHDM_amu.cpp  test_MSSMNoFV.cpp  test_MSSMNoFV_c_interface.cpp  test_MSSMNoFV_onshell.cpp  test_MSSMNoFV_python_interface.py.in  test_MSSMNoFV_slha_io.cpp  test_SM.cpp  test_SM_c_interface.cpp  test_SM_slha_io.cpp  test_THDM.cpp  test_THDM_amu.cpp  test_THDM_c_interface.cpp  test_THDM_py_interface.py.in  test_THDM_python_interface.py.in  test_THDM_slha_io.cpp  test_benchmark.cpp  test_benchmark_ffunctions.cpp  test_c_examples.sh  test_c_interface.cpp  test_config.cpp  test_dilog.cpp  test_eigen_utils.cpp  test_ffunctions.cpp  test_ffunctions_benchmark.cpp  test_gm2calc.sh  test_linalg.cpp  test_linalg2.cpp  test_linalg_1.cpp  test_linalg_2.cpp  test_linalg_3.cpp  test_linalg_4.cpp  (+10 more)
test/data/: F1.txt  F1C.txt  F1N.txt  F1t.txt  F2.txt  F2C.txt  F2N.txt  F3.txt  F3C.txt  F3N.txt  F4C.txt  F4N.txt  FCWd.txt  FCWl.txt  FCWu.txt  FPZ.txt  FSZ.txt  Fa.txt  Fb.txt  G3.txt  G4.txt  Gn0.txt  Gn1.txt  Gn2.txt  Gn3.txt  Lambda2.txt  fCSd.txt  fCSu.txt  fCl.txt  fPS.txt  fS.txt  fsferm.txt  fv.txt
test/data/2HDMC/: 2HDMC-1L-scan-mA.txt  2HDMC-2L-scan-mA.txt  2HDMC-scan-mA-no-running.txt  2HDMC-scan-mA-with-running.txt
test/data/figure_4/: figure_4.py  figure_4a.txt  figure_4b.txt  figure_4c.txt  figure_4d.txt
test/data/figure_8/: figure_8.gnuplot  figure_8.txt
test/gambit/: GeneralTHDM_oldcode.cpp  GeneralTHDM_oldcode.hpp  THDMOneLoop.m
test/test_points/: BM1-1504.05500_1L_resummed.in  BM1-1504.05500_2L_resummed.in  BM2-1504.05500_1L_resummed.in  BM2-1504.05500_2L_resummed.in  BM3-1504.05500_1L_resummed.in  BM3-1504.05500_2L_resummed.in  BM4-1504.05500_1L_resummed.in  BM4-1504.05500_2L_resummed.in  BM5-1504.05500_1L_resummed.in  BM5-1504.05500_2L_resummed.in  P1a_1L_resummed_diploma_thesis_Markus_Bach.in  P1a_2L_resummed_diploma_thesis_Markus_Bach.in  P1b_1L_resummed_diploma_thesis_Markus_Bach.in  P1b_2L_resummed_diploma_thesis_Markus_Bach.in  P1c_1L_resummed_diploma_thesis_Markus_Bach.in  P1c_2L_resummed_diploma_thesis_Markus_Bach.in  P2_1L_resummed_diploma_thesis_Markus_Bach.in  P2_2L_resummed_diploma_thesis_Markus_Bach.in  P3_1L_resummed_diploma_thesis_Markus_Bach.in  P3_2L_resummed_diploma_thesis_Markus_Bach.in  P4_2L_resummed_diploma_thesis_Markus_Bach.in  example_thdm_gauges-basis.in  example_thdm_mass-basis.in  problems_bino_reordering.in  problems_bino_reordering_pole_running.in  problems_bug_smuon_mixing-2.in  problems_bug_smuon_mixing.in  problems_funcs_Fa_Fb.in  problems_funcs_I_FC_FN.in  problems_funcs_M1_zero.in  problems_funcs_Mu_zero.in  problems_funcs_Mu_zero_1L.in  problems_funcs_Mu_zero_2L.in  problems_funcs_xim_zero.in  problems_hmix_scale.in  problems_infinite_TB.in  problems_negative_soft_mass.in  problems_throw_me2_convergence.in  problems_zero_TB.in  thdm_contradictory_input.in  (+8 more)
(+3 files in other folders)
