function(add_gm2calc_example name ext libs)
  add_executable(${name}.x ${name}.${ext})
  target_link_libraries(${name}.x GM2Calc::gm2calc ${libs})
endfunction()

add_gm2calc_example(example-gm2calc   cpp "" )
add_gm2calc_example(example-gm2scan   cpp "" )
add_gm2calc_example(example-slha      cpp "" )
add_gm2calc_example(example-gm2calc_c c   "m")
add_gm2calc_example(example-slha_c    c   "m")
